--- a/TutGetAndroid/app/src/main/res/values/strings.xml
+++ b/TutGetAndroid/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="userName">User Name</string>
     <string name="passWord">Password</string>
     <string name="wrong_login">Either Username or Password is wrong</string>
+    <string name="logout">Log Out of your Account</string>
+    <string name="logoutText">Are you sure you want to logout, </string>
 
 
 
@@ -29,6 +31,8 @@
     <string name="listingTime">Timing</string>
 
     <string name="bottom_navigation_add">Post Listing</string>
+    <string name="bottom_navigation_QnA">QnA</string>
+    <string name="bottom_navigation_listing">Listing</string>
     <string name="bottom_navigation_home">My Listing</string>
     <string name="bottom_navigation_profile">Profile</string>
     bottom_navigation_home
